# songsync

./: .gitignore  README.md  app.py  main.py  pyproject.toml  songsync_cmd.sh
examples/: convert_yt_to_spotify_playlist.py
songsync/: lang_helpers.py  songsync.py  sp_helpers.py  yt_helpers.py
