[tool.poetry]
name = "songsync"
version = "0.1.0"
description = ""
authors = ["pianobin <shoji@pianobin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ytmusicapi = "^1.3.2"
requests = "^2.31.0"
spotipy = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
